<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8">
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/background_1"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <TextView
        android:id="@+id/sensorValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#203864"
        android:textSize="30sp"
        android:maxLength="12"
        app:layout_constraintTop_toTopOf="@id/progressBar"
        app:layout_constraintBottom_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="@id/progressBar" />

    <TextView
        android:id="@+id/sensorUnity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#203864"
        android:textSize="15dp"
        android:maxLength="4"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/progressBar"
        app:layout_constraintBottom_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="@id/sensorValue"
        app:layout_constraintEnd_toEndOf="@id/progressBar" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="240dp"
        android:layout_height="200dp"
        android:max="2500"
        android:progress="2500"
        android:indeterminate="false"
        android:progressDrawable="@drawable/circular_progress_drawable"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"/>

    <Button
        android:id="@+id/water_type"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/round_button_yellow"
        android:textColor="@android:color/white"
        android:text="@string/waterType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginBottom="200dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.8">


        <ImageButton
            android:id="@+id/arrowLeft"
            android:layout_width="40dp"
            android:layout_height="100dp"
            android:src="@drawable/arrow_left"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:layout_marginEnd="30dp"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/waterParameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="temperature"
            android:textColor="#203864"
            android:textSize="20sp"
            android:layout_toEndOf="@id/arrowLeft"
            android:layout_centerVertical="true" />

        <ImageButton
            android:id="@+id/arrowRight"
            android:layout_width="40dp"
            android:layout_height="100dp"
            android:src="@drawable/arrow_right"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:layout_marginStart="30dp"
            android:scaleType="fitCenter"
            android:layout_toEndOf="@id/waterParameter"
            android:layout_centerVertical="true" />

    </RelativeLayout>



    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:src="@drawable/icon"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!--
<ToggleButton
    android:id="@+id/switch_mode"
    android:layout_width="90dp"
    android:layout_height="40dp"
    android:background="@drawable/round_button"
    android:textColor="@android:color/white"
    android:textOff="Water"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="30dp" />
-->


    <Button
        android:id="@+id/modeoffon"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:background="@drawable/round_button"
        android:textColor="@android:color/white"
        android:text="@string/modeoffon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"/>


    <Button
        android:id="@+id/disconnect"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:background="@drawable/round_button"
        android:textColor="@android:color/white"
        android:text="@string/disconnect"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>